# EmbeddedContest2022_0581

astra_ws/devel/: .catkin
catkin_astro_ws/devel/: .catkin  _setup_util.py  local_setup.sh
catkin_google_ws/build_isolated/: catkin_make_isolated.cache
catkin_google_ws/build_isolated/cartographer_ros/: .ninja_deps  .ninja_log  AllFiles.cmake  CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  build.ninja  cmake_install.cmake  install_manifest.txt  rules.ninja
catkin_google_ws/build_isolated/cartographer_ros_msgs/: .ninja_log  CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  build.ninja  cmake_install.cmake  install_manifest.txt  rules.ninja
catkin_google_ws/build_isolated/cartographer_rviz/: .ninja_deps  .ninja_log  AllFiles.cmake  CMakeCache.txt  (+6 more)
catkin_google_ws/devel_isolated/: env.sh  setup.bash  setup.sh  setup.zsh
catkin_google_ws/install_isolated/: setup.sh
catkin_google_ws/src/: .rosinstall
catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
catkin_ws/src/ls01B_ros/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/ls01B_ros/launch/: ls01B.launch  rviz.launch
catkin_ws/src/ls01B_ros/src/: ls01b_driver.cpp  ls01b_driver.h  main.cpp
catkin_ws/src/odom_tf_package/robot_navigation/: CMakeLists.txt  package.xml
catkin_ws/src/odom_tf_package/robot_navigation/config/fake/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
catkin_ws/src/odom_tf_package/robot_navigation/config/turtlebot/: base_local_planner_params.yaml  costmap_common_params.yaml
catkin_ws/src/odom_tf_package/robot_navigation/launch/: fake_move_base.launch  fake_move_base_blank_map.launch  fake_move_base_map_with_obstacles.launch  fake_move_base_obstacles.launch  tb_move_base.launch  tb_move_base_blank_map.launch  view_nav.launch  view_nav_obstacles.launch
catkin_ws/src/odom_tf_package/robot_navigation/src/: move_base_square.cpp
mobile_app/: settings.gradle
mobile_app/app/: build.gradle
ncnn/docs/: faq.en.md
ncnn/src/: ncnn.pc.in
rgbdslam_v2/: CMakeLists.txt
rgbdslam_v2/launch/: rgbdslam.launch
yolov5/: detect.py  run_detect.py  train.py
yolov5/data/: tra.yaml
(+818 files in other folders)
